# RAG-Based-Mental-Health-Support-Chatbot

./: .gitattributes  .gitignore  Datasets_urls.md  HF_Datasets_urls.md  README.md
.github/workflows/: deploy-hf-space.yml
1- Language Detection Model/Ahmed Elsayed/: Language_detection_module.ipynb
1- Language Detection Model/Mahmoud Saqr/: module1.ipynb
1- Language Detection Model/Mostafa Mamdouh/: module1_inference.ipynb  module1_language_detection.ipynb
1- Language Detection Model/Muhammed Bassiouni/: Lang_Detect_model_v1.ipynb  ang_vectorizer.pkl  ml_lang_model.pkl
2- Emotion Classifier Model/Ahmed Elsayed/: Emotion_Classifier.ipynb
2- Emotion Classifier Model/Mahmoud Saqr/: Emotion_classifier.ipynb
2- Emotion Classifier Model/Mostafa Mamdouh/: module2-emotion-classifier.ipynb  module2_emotion_classifier.ipynb  module2_emotion_inference.ipynb
2- Emotion Classifier Model/Muhammed Bassiouni/: Emotion_Classifier.ipynb  best_emotion_model.pt
3- Intent Classifier Model/Ahmed Elsayed/: Intent_Classifier.ipynb
3- Intent Classifier Model/Mahmoud Saqr/: intent_classifier.ipynb  pipeline.ipynb
Final System Files/Module 2/: Emotion_classifier.ipynb
Final System Files/Module 4/: .dockerignore  .gitignore  Dockerfile  README.md  Steps_to_use.txt  app.py  components.py  feedback_service.py  mento_pipeline.py  prompts.py  pyproject.toml  rag_service.py  requirements.txt  settings.py  validate_module4.py
Final System Files/Module 4/static/css/: styles.css
Final System Files/Module 4/static/js/: app.js
Final System Files/Module 4/templates/: index.html
(+18 files in other folders)
