[project]
name = "module-4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.5.1",
    "datasets>=5.0.0",
    "flask>=3.1.3",
    "groq>=0.37.1",
    "gspread>=6.0.0",
    "isort>=8.0.1",
    "joblib>=1.5.3",
    "langchain>=1.3.4",
    "langchain-classic>=1.0.7",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "langsmith>=0.8.9",
    "numpy>=2.4.6",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "requests>=2.0.0",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.5.1",
    "torch>=2.12.0",
    "transformers>=5.10.2",
]
